kubernetes/manifests/hermes/ubuntu-vm-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-vm
  namespace: hermes
  annotations:
    # Operator stands up an egress proxy (ns tailscale) to this tailnet host and
    # rewrites spec.externalName to the headless proxy svc. See ignoreDifferences
    # in kubernetes/apps/hermes.yaml.
    tailscale.com/tailnet-fqdn: petzko-ubuntu-vm.pintail-monster.ts.net
spec:
  type: ExternalName
  externalName: placeholder   # operator overwrites this
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
